refactor(basic-3.3): keep the names of identifiers and classes concise

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   text-align: center;
 }
 }
-.centered-main-page-element {
+.main-element {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -32,7 +32,7 @@ body {
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.tasks {
   display: flex;
 }
 ul {
@@ -119,17 +119,17 @@ li > label {
 li >  input[type="text"] {
   width: 226px
 }
-button.delete-btn img {
+button.del-btn img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete-btn img:hover {
+button.del-btn img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed label {
   text-decoration: line-through;
   color: #888;
 }
