--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 .more-inf-img {
   width: 100%;
 }
-.more-inf-block .more-inf {
+.more-inf-block, 
+.more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -39,10 +40,12 @@
   margin: 0;
   padding: 0px;
 }
-#tasks-list-item, .sec-title {
+#tasks-list-item,
+.sec-title {
   list-style: none;
 }
-input,#list-item-btn{
+input,
+#list-item-btn{
   outline: none;
 }
 #list-item-btn {
@@ -98,7 +101,6 @@ label[for="new-task"] {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -118,7 +120,8 @@ label[for="new-task"] {
 #tasks-list-item >  input[type="text"] {
   width: 226px;
 }
-button.del-btn img {
+button.del-btn
+img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
@@ -128,21 +131,26 @@ button.del-btn img {
 }
 
 /* Completed */
-#completed label {
+#completed 
+label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+ul
+li
+input[type=text] {
   display: none;
 }
 
-.edit-mode input[type=text] {
+.edit-mode
+input[type=text] {
   display: inline-block;
   width:224px
 }
 
-.edit-mode label {
+.edit-mode
+label {
   display: none;
 }
