--- a/style.css
+++ b/style.css
@@ -4,26 +4,26 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
-.more-inf-block {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.more-inf-img {
+.header__img {
   width: 100%;
 }
-.more-inf-block, 
-.more-inf {
+.header, 
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .more-inf-block { 
+  .header { 
     text-align: center;
   }
 }
-.main-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -33,7 +33,7 @@
   display: inline-block;
   flex-grow: 1;
 }
-.tasks {
+.add__section__container {
   display: flex;
 }
 .tasks-list {
